Closed Bug 509636 Opened 15 years ago Closed 15 years ago

"Assertion failure: pn->pn_type != TOK_COMMA, at ../jsemit.cpp"

Categories

(Core :: JavaScript Engine, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: gkw, Assigned: jorendorff)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

[]=[(0,0)]

asserts js dbg shell on TM branch (31079:3d4074b8928e) without -j at Assertion failure: pn->pn_type != TOK_COMMA, at ../jsemit.cpp:3855 when parsed in as a file.

$ cat a.js
[]=[(0,0)]
$ ./js-dbg-tm-darwin a.js 
Assertion failure: pn->pn_type != TOK_COMMA, at ../jsemit.cpp:3855
Trace/BPT trap

autoBisecting soon...
Flags: blocking1.9.2?
Attached patch v1Splinter Review
The assertion is wrong.  The bug is harmless in non-DEBUG builds.
Assignee: general → jorendorff
Attachment #393706 - Flags: review?(jwalden+bmo)
Blocks: 461269
Attachment #393706 - Flags: review?(jwalden+bmo) → review+
http://hg.mozilla.org/tracemonkey/rev/a30674b90265
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/a30674b90265
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: