Bug 509636 - Assertion failure: pn->pn_type != TOK_COMMA, at ../jsemit.cpp. r=Waldo.